--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Kawasaki Studio</h1>
+<p>Any suggestion or feedback about our apps? feel free to drop a line to shrekdad at g...l.com</p>
 </body>
 </html>
