--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 <body>
 <h1>Kawasaki Studio</h1>
 <p>Any suggestion or feedback about our apps? feel free to drop a line to shrekdad at g...l.com</p>
