--- a/pp_kawasaki.html
+++ b/pp_kawasaki.html
@@ -1,6 +1,12 @@
 
-<html><head><title>Kawasaki Privacy Policy</title></head><body>
-
+<html>
+  
+  <head>
+    <title>Kawasaki Privacy Policy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  
+  <body>
 <h1>Privacy Policy</h1>
 This Privacy Policy explains how we and some of the companies we work with collect, use, share and protect information in relation to our mobile services, web site, and any software provided on or in connection with Kawasaki services (collectively, the “Service”), and your choices about the collection and use of your information.
 <br><br>
