--- a/pp_kawasaki.html
+++ b/pp_kawasaki.html
@@ -102,7 +102,7 @@ Kawasaki does not knowingly collect or solicit any information from anyone under
 We are not responsible for the practices employed by any websites or services linked to or from our Service, including the information or content contained within them.
 <br><br>
 <h2>7. HOW TO CONTACT US</h2>
-If you have any questions about this Privacy Policy or the Service, please contact us through the email instamo.studio@gmail.com.
+If you have any questions about this Privacy Policy or the Service, please contact us through the email shrekdad@gmail.com.
 <br><br>
 <h2>8. CHANGES TO OUR PRIVACY POLICY</h2>
 Kawasaki may modify or update this Privacy Policy from time to time, so please review it periodically. We may provide you additional forms of notice of modifications or updates as appropriate under the circumstances. Your continued use of Kawasaki or the Service after any modification to this Privacy Policy will constitute your acceptance of such modification.
