--- a/pp_ 6739521769.html
+++ b/pp_ 6739521769.html
@@ -9,7 +9,7 @@
     <h1>Mistake Journal Privacy Policy</h1>
 
     <h2>Introduction</h2>
-    <p>At Mistake Journal, we are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard information when you use our app.</p>
+    <p>We are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard information when you use our app.</p>
 
     <h2>Information We Collect</h2>
     <p><strong>User-Provided Information:</strong> When you use Mistake Journal, you may provide us with information such as:</p>
