--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shrekdad Works</title>
+    <title>Shrekdad Studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body>
-<h1>Shrekdad Works</h1>
+<h1>Shrekdad Studio</h1>
 <p>Any suggestion or feedback about our apps? feel free to drop a line to shrekdad at g...l.com</p>
 </body>
 </html>
