--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 <body>
 <h1>Kawasaki Team</h1>
-<p>Any suggestion or feedback about our apps? feel free to drop a line to shrekdad at g...l.com</p>
+<p>If you have any questions or suggestions for our apps, please feel free to reach out to our team at:</p>
+<p><a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a></p>
 </body>
 </html>
