--- a/tos1498107670.html
+++ b/tos1498107670.html
@@ -1,6 +1,6 @@
-Math Mole Terms of Service
+#Math Mole Terms of Service
 Last Updated: March 26, 2025
-Welcome to Math Mole! These Terms of Service ("Terms") govern your use of the Math Mole application ("App"), provided by [Your Company Name] ("we," "us," or "our"). By downloading, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, please do not use the App.
+Welcome to Math Mole! These Terms of Service ("Terms") govern your use of the Math Mole application ("App"), provided by Kawasaki Studio ("we," "us," or "our"). By downloading, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, please do not use the App.
 1. Use of the App
 Eligibility: You must be at least 13 years old to use Math Mole. If you are under 18, you must have permission from a parent or legal guardian.
 
@@ -12,10 +12,10 @@ Prohibited Actions: You may not: (a) modify, reverse-engineer, or distribute the
 If the App requires an account, you agree to provide accurate information and keep your login credentials secure. You are responsible for all activity under your account.
 
 3. Intellectual Property
-All content, features, and design of Math Mole (including but not limited to text, graphics, logos, and software) are owned by [Your Company Name] or our licensors and are protected by copyright, trademark, and other laws. You may not use our intellectual property without written permission.
+All content, features, and design of Math Mole (including but not limited to text, graphics, logos, and software) are owned by Kawasaki Studio or our licensors and are protected by copyright, trademark, and other laws. You may not use our intellectual property without written permission.
 
 4. Privacy
-Your use of Math Mole is also governed by our Privacy Policy [insert link if applicable], which explains how we collect, use, and protect your information.
+Your use of Math Mole is also governed by our Privacy Policy, which explains how we collect, use, and protect your information.
 
 5. Termination
 We may suspend or terminate your access to the App at our discretion, with or without notice, if you violate these Terms or for any other reason. You may stop using the App at any time.
@@ -24,14 +24,13 @@ We may suspend or terminate your access to the App at our discretion, with or wi
 Math Mole is provided "as is" and "as available." We do not guarantee that the App will be error-free, secure, or always available. To the fullest extent permitted by law, we disclaim all warranties, express or implied.
 
 7. Limitation of Liability
-To the maximum extent permitted by law, [Your Company Name] will not be liable for any indirect, incidental, or consequential damages arising from your use of the App, even if we were advised of the possibility of such damages.
+To the maximum extent permitted by law, Kawasaki Studio will not be liable for any indirect, incidental, or consequential damages arising from your use of the App, even if we were advised of the possibility of such damages.
 
 8. Changes to the Terms
 We may update these Terms from time to time. We will notify you of significant changes by posting the updated Terms in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the new Terms.
 
 9. Governing Law
-These Terms are governed by the laws of [Your State/Country], without regard to conflict of law principles.
+These Terms are governed by the laws of United States, without regard to conflict of law principles.
 
 10. Contact Us
-If you have questions about these Terms, please contact us at [Your Contact Email].
-
+If you have questions about these Terms, please contact us at shrekdad@gmail.com.
