--- a/tos1498107670.html
+++ b/tos1498107670.html
@@ -1,36 +1,63 @@
-#Math Mole Terms of Service
-Last Updated: March 26, 2025
-Welcome to Math Mole! These Terms of Service ("Terms") govern your use of the Math Mole application ("App"), provided by Kawasaki Studio ("we," "us," or "our"). By downloading, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, please do not use the App.
-1. Use of the App
-Eligibility: You must be at least 13 years old to use Math Mole. If you are under 18, you must have permission from a parent or legal guardian.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Math Mole - Terms of Service</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h2 {
+            margin-top: 20px;
+        }
+        p {
+            margin: 10px 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Math Mole Terms of Service</h1>
+    <p><em>Last Updated: March 26, 2025</em></p>
 
-License: We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes, subject to these Terms.
+    <p>Welcome to Math Mole! These Terms of Service ("Terms") govern your use of the Math Mole application ("App"), provided by Kawasaki Studio ("we," "us," or "our"). By downloading, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, please do not use the App.</p>
 
-Prohibited Actions: You may not: (a) modify, reverse-engineer, or distribute the App; (b) use the App for illegal purposes; (c) interfere with the App’s functionality; or (d) use the App to harm others.
+    <h2>1. Use of the App</h2>
+    <p><strong>Eligibility:</strong> You must be at least 13 years old to use Math Mole. If you are under 18, you must have permission from a parent or legal guardian.</p>
+    <p><strong>License:</strong> We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes, subject to these Terms.</p>
+    <p><strong>Prohibited Actions:</strong> You may not: (a) modify, reverse-engineer, or distribute the App; (b) use the App for illegal purposes; (c) interfere with the App’s functionality; or (d) use the App to harm others.</p>
 
-2. User Accounts
-If the App requires an account, you agree to provide accurate information and keep your login credentials secure. You are responsible for all activity under your account.
+    <h2>2. User Accounts</h2>
+    <p>If the App requires an account, you agree to provide accurate information and keep your login credentials secure. You are responsible for all activity under your account.</p>
 
-3. Intellectual Property
-All content, features, and design of Math Mole (including but not limited to text, graphics, logos, and software) are owned by Kawasaki Studio or our licensors and are protected by copyright, trademark, and other laws. You may not use our intellectual property without written permission.
+    <h2>3. Intellectual Property</h2>
+    <p>All content, features, and design of Math Mole (including but not limited to text, graphics, logos, and software) are owned by Kawasaki Studio or our licensors and are protected by copyright, trademark, and other laws. You may not use our intellectual property without written permission.</p>
 
-4. Privacy
-Your use of Math Mole is also governed by our Privacy Policy, which explains how we collect, use, and protect your information.
+    <h2>4. Privacy</h2>
+    <p>Your use of Math Mole is also governed by our Privacy Policy, which explains how we collect, use, and protect your information.</p>
 
-5. Termination
-We may suspend or terminate your access to the App at our discretion, with or without notice, if you violate these Terms or for any other reason. You may stop using the App at any time.
+    <h2>5. Termination</h2>
+    <p>We may suspend or terminate your access to the App at our discretion, with or without notice, if you violate these Terms or for any other reason. You may stop using the App at any time.</p>
 
-6. Disclaimer of Warranties
-Math Mole is provided "as is" and "as available." We do not guarantee that the App will be error-free, secure, or always available. To the fullest extent permitted by law, we disclaim all warranties, express or implied.
+    <h2>6. Disclaimer of Warranties</h2>
+    <p>Math Mole is provided "as is" and "as available." We do not guarantee that the App will be error-free, secure, or always available. To the fullest extent permitted by law, we disclaim all warranties, express or implied.</p>
 
-7. Limitation of Liability
-To the maximum extent permitted by law, Kawasaki Studio will not be liable for any indirect, incidental, or consequential damages arising from your use of the App, even if we were advised of the possibility of such damages.
+    <h2>7. Limitation of Liability</h2>
+    <p>To the maximum extent permitted by law, Kawasaki Studio will not be liable for any indirect, incidental, or consequential damages arising from your use of the App, even if we were advised of the possibility of such damages.</p>
 
-8. Changes to the Terms
-We may update these Terms from time to time. We will notify you of significant changes by posting the updated Terms in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the new Terms.
+    <h2>8. Changes to the Terms</h2>
+    <p>We may update these Terms from time to time. We will notify you of significant changes by posting the updated Terms in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the new Terms.</p>
 
-9. Governing Law
-These Terms are governed by the laws of United States, without regard to conflict of law principles.
+    <h2>9. Governing Law</h2>
+    <p>These Terms are governed by the laws of United States, without regard to conflict of law principles.</p>
 
-10. Contact Us
-If you have questions about these Terms, please contact us at shrekdad@gmail.com.
+    <h2>10. Contact Us</h
