--- a/tos1498107670.html
+++ b/tos1498107670.html
@@ -60,4 +60,8 @@
     <h2>9. Governing Law</h2>
     <p>These Terms are governed by the laws of United States, without regard to conflict of law principles.</p>
 
-    <h2>10. Contact Us</h
+    <h2>10. Contact Us</h2>
+    <p>If you have questions about these Terms, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
+
+</body>
+</html>
