--- a/1498107670_pp.html
+++ b/1498107670_pp.html
@@ -4,58 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Mole - Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h2 {
+            margin-top: 20px;
+        }
+        p {
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
     <h1>Math Mole Privacy Policy</h1>
+    <p><em>Last Updated: March 26, 2025</em></p>
 
-    <h2>Introduction</h2>
-    <p>We are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard information when you use our app.</p>
+    <p>At Kawasaki Studio, we value your privacy. This Privacy Policy explains how we collect, use, disclose, and protect your information when you use the Math Mole application ("App"). By using the App, you agree to the terms of this Privacy Policy. If you have questions, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
 
-    <h2>Information We Collect</h2>
-    <p><strong>User-Provided Information:</strong> When you use Math Mole, you may provide us with information such as:</p>
-    <ul>
-        <li>Your name and email address when you sign up or contact us.</li>
-        <li>Mistakes and study materials you enter into the app.</li>
-    </ul>
-    <p><strong>Automatically Collected Information:</strong> We may automatically collect certain information including:</p>
-    <ul>
-        <li>Usage data like how you interact with our app.</li>
-        <li>Device information like your device model, OS version, and unique device identifiers.</li>
-    </ul>
+    <h2>1. Information We Collect</h2>
+    <p>We may collect the following types of information:</p>
+    <p><strong>Personal Information:</strong> If you create an account, we may collect your name, email address, or other details you provide.</p>
+    <p><strong>Usage Data:</strong> We may collect information about how you use the App, such as your device type, IP address, and activity within the App.</p>
+    <p><strong>Non-Personal Information:</strong> We may collect aggregated or anonymized data that does not identify you personally.</p>
 
-    <h2>How We Use Your Information</h2>
+    <h2>2. How We Use Your Information</h2>
     <p>We use your information to:</p>
-    <ul>
-        <li>Provide, maintain, and improve our app and services.</li>
-        <li>Understand and analyze how you use Math Mole to optimize our features.</li>
-        <li>Send you technical notices, updates, security alerts, and support and administrative messages.</li>
-        <li>Respond to your comments, questions, and requests.</li>
-    </ul>
+    <p>- Provide, maintain, and improve the App’s functionality.</p>
+    <p>- Personalize your experience within Math Mole.</p>
+    <p>- Communicate with you, including responding to inquiries or sending updates.</p>
+    <p>- Analyze usage trends to enhance the App.</p>
 
-    <h2>Sharing Your Information</h2>
-    <p>We do not sell, rent, or share your personal information with third parties for their marketing purposes. However, we may share information as follows:</p>
-    <ul>
-        <li>With service providers who help us with our business operations.</li>
-        <li>When required by law or to respond to legal processes.</li>
-    </ul>
+    <h2>3. Sharing Your Information</h2>
+    <p>We do not sell your personal information. We may share your information:</p>
+    <p>- With service providers who assist us in operating the App (e.g., hosting or analytics providers), under strict confidentiality terms.</p>
+    <p>- If required by law, such as to comply with a legal obligation or protect our rights.</p>
+    <p>- In the event of a merger, acquisition, or sale of assets, where your information may be transferred.</p>
 
-    <h2>Security</h2>
-    <p>We take reasonable steps to protect your personal information using a combination of physical, electronic, and procedural safeguards. However, no method of transmission over the Internet or method of electronic storage is 100% secure.</p>
+    <h2>4. Data Security</h2>
+    <p>We take reasonable measures to protect your information from unauthorized access, loss, or misuse. However, no system is completely secure, and we cannot guarantee absolute security.</p>
 
-    <h2>Your Choices</h2>
-    <p>You have several choices regarding your information:</p>
-    <ul>
-        <li>You can review and change your personal information by logging into the app.</li>
-        <li>You can opt out of receiving promotional emails by following the unsubscribe link in those emails.</li>
-        <li>You can request to have your data deleted by contacting us.</li>
-    </ul>
+    <h2>5. Your Choices</h2>
+    <p>- You may update or delete your account information by contacting us.</p>
+    <p>- You can opt out of promotional communications by following the instructions in those messages.</p>
 
-    <h2>Changes to This Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+    <h2>6. Children’s Privacy</h2>
+    <p>Math Mole is not intended for children under 13. We do not knowingly collect personal information from children under 13. If we learn we have done so, we will delete it promptly.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy or the practices of Math Mole, please contact us at:</p>
-    <p><a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a></p>
+    <h2>7. Third-Party Links</h2>
+    <p>The App may contain links to third-party websites or services. We are not responsible for their privacy practices. Please review their policies before providing information.</p>
+
+    <h2>8. Changes to This Privacy Policy</h2>
+    <p>We may update this Privacy Policy from time to time. We will notify you of significant changes by posting the updated policy in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the updated policy.</p>
+
+    <h2>9. International Users</h2>
+    <p>The App is operated from [Your Country]. If you use Math Mole from outside [Your Country], your information may be transferred to and processed in United States, where data protection laws may differ.</p>
+
+    <h2>10. Contact Us</h2>
+    <p>If you have questions or concerns about this Privacy Policy, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
 
 </body>
 </html>
