--- a/1498107670_pp.html
+++ b/1498107670_pp.html
@@ -67,7 +67,7 @@
     <p>We may update this Privacy Policy from time to time. We will notify you of significant changes by posting the updated policy in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the updated policy.</p>
 
     <h2>9. International Users</h2>
-    <p>The App is operated from [Your Country]. If you use Math Mole from outside [Your Country], your information may be transferred to and processed in United States, where data protection laws may differ.</p>
+    <p>The App is operated from United States. If you use Math Mole from outside United States, your information may be transferred to and processed in United States, where data protection laws may differ.</p>
 
     <h2>10. Contact Us</h2>
     <p>If you have questions or concerns about this Privacy Policy, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
