--- a/1498107670_sp.html
+++ b/1498107670_sp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Mole - Privacy Policy</title>
+    <title>Math Mink - Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Math Mole</h1>
+    <h1>Math Mink</h1>
     <p>If you have questions or concerns about this app, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
 </body>
 </html>
