--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kawasaki Studio</title>
+    <title>Anna Studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body>
-<h1>Kawasaki Studio</h1>
+<h1>Anna Studio</h1>
 <p>If you have any questions or suggestions for our apps, please feel free to reach out to our team at:</p>
 <p><a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a></p>
 </body>
