--- a/1498107670_pp.html
+++ b/1498107670_pp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Mink - Privacy Policy</title>
+    <title>Math Mole - Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,10 +26,10 @@
     </style>
 </head>
 <body>
-    <h1>Math Mink Privacy Policy</h1>
+    <h1>Math Mole Privacy Policy</h1>
     <p><em>Last Updated: March 26, 2025</em></p>
 
-    <p>At Anna Studio, we value your privacy. This Privacy Policy explains how we collect, use, disclose, and protect your information when you use the Math Mink application ("App"). By using the App, you agree to the terms of this Privacy Policy. If you have questions, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
+    <p>At Anna Studio, we value your privacy. This Privacy Policy explains how we collect, use, disclose, and protect your information when you use the Math Mole application ("App"). By using the App, you agree to the terms of this Privacy Policy. If you have questions, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
 
     <h2>1. Information We Collect</h2>
     <p>We may collect the following types of information:</p>
@@ -40,7 +40,7 @@
     <h2>2. How We Use Your Information</h2>
     <p>We use your information to:</p>
     <p>- Provide, maintain, and improve the App’s functionality.</p>
-    <p>- Personalize your experience within Math Mink.</p>
+    <p>- Personalize your experience within Math Mole.</p>
     <p>- Communicate with you, including responding to inquiries or sending updates.</p>
     <p>- Analyze usage trends to enhance the App.</p>
 
@@ -58,16 +58,16 @@
     <p>- You can opt out of promotional communications by following the instructions in those messages.</p>
 
     <h2>6. Children’s Privacy</h2>
-    <p>Math Mink is not intended for children under 13. We do not knowingly collect personal information from children under 13. If we learn we have done so, we will delete it promptly.</p>
+    <p>Math Mole is not intended for children under 13. We do not knowingly collect personal information from children under 13. If we learn we have done so, we will delete it promptly.</p>
 
     <h2>7. Third-Party Links</h2>
     <p>The App may contain links to third-party websites or services. We are not responsible for their privacy practices. Please review their policies before providing information.</p>
 
     <h2>8. Changes to This Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. We will notify you of significant changes by posting the updated policy in the App or through other means. Your continued use of Math Mink after such changes constitutes acceptance of the updated policy.</p>
+    <p>We may update this Privacy Policy from time to time. We will notify you of significant changes by posting the updated policy in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the updated policy.</p>
 
     <h2>9. International Users</h2>
-    <p>The App is operated from United States. If you use Math Mink from outside United States, your information may be transferred to and processed in United States, where data protection laws may differ.</p>
+    <p>The App is operated from United States. If you use Math Mole from outside United States, your information may be transferred to and processed in United States, where data protection laws may differ.</p>
 
     <h2>10. Contact Us</h2>
     <p>If you have questions or concerns about this Privacy Policy, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
