--- a/1498107670_tos.html
+++ b/1498107670_tos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Mink - Terms of Service</title>
+    <title>Math Mole - Terms of Service</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,10 +26,10 @@
     </style>
 </head>
 <body>
-    <h1>Math Mink Terms of Service</h1>
+    <h1>Math Mole Terms of Service</h1>
     <p><em>Last Updated: March 26, 2025</em></p>
 
-    <p>Welcome to Math Mink! These Terms of Service ("Terms") govern your use of the Math Mink application ("App"), provided by Anna Studio ("we," "us," or "our"). By downloading, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, please do not use the App.</p>
+    <p>Welcome to Math Mole! These Terms of Service ("Terms") govern your use of the Math Mole application ("App"), provided by Anna Studio ("we," "us," or "our"). By downloading, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, please do not use the App.</p>
 
     <h2>1. Use of the App</h2>
     <p><strong>License:</strong> We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes, subject to these Terms.</p>
@@ -39,22 +39,22 @@
     <p>If the App requires an account, you agree to provide accurate information and keep your login credentials secure. You are responsible for all activity under your account.</p>
 
     <h2>3. Intellectual Property</h2>
-    <p>All content, features, and design of Math Mink (including but not limited to text, graphics, logos, and software) are owned by Anna Studio or our licensors and are protected by copyright, trademark, and other laws. You may not use our intellectual property without written permission.</p>
+    <p>All content, features, and design of Math Mole (including but not limited to text, graphics, logos, and software) are owned by Anna Studio or our licensors and are protected by copyright, trademark, and other laws. You may not use our intellectual property without written permission.</p>
 
     <h2>4. Privacy</h2>
-    <p>Your use of Math Mink is also governed by our Privacy Policy, which explains how we collect, use, and protect your information.</p>
+    <p>Your use of Math Mole is also governed by our Privacy Policy, which explains how we collect, use, and protect your information.</p>
 
     <h2>5. Termination</h2>
     <p>We may suspend or terminate your access to the App at our discretion, with or without notice, if you violate these Terms or for any other reason. You may stop using the App at any time.</p>
 
     <h2>6. Disclaimer of Warranties</h2>
-    <p>Math Mink is provided "as is" and "as available." We do not guarantee that the App will be error-free, secure, or always available. To the fullest extent permitted by law, we disclaim all warranties, express or implied.</p>
+    <p>Math Mole is provided "as is" and "as available." We do not guarantee that the App will be error-free, secure, or always available. To the fullest extent permitted by law, we disclaim all warranties, express or implied.</p>
 
     <h2>7. Limitation of Liability</h2>
     <p>To the maximum extent permitted by law, Anna Studio will not be liable for any indirect, incidental, or consequential damages arising from your use of the App, even if we were advised of the possibility of such damages.</p>
 
     <h2>8. Changes to the Terms</h2>
-    <p>We may update these Terms from time to time. We will notify you of significant changes by posting the updated Terms in the App or through other means. Your continued use of Math Mink after such changes constitutes acceptance of the new Terms.</p>
+    <p>We may update these Terms from time to time. We will notify you of significant changes by posting the updated Terms in the App or through other means. Your continued use of Math Mole after such changes constitutes acceptance of the new Terms.</p>
 
     <h2>9. Governing Law</h2>
     <p>These Terms are governed by the laws of United States, without regard to conflict of law principles.</p>
