Update and rename index.html to sp2.html

--- a/sp2.html
+++ b/sp2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Anna Studio</title>
+    <title>Instamo Studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body>
 <h1>Anna Studio</h1>
 <p>If you have any questions or suggestions for our apps, please feel free to reach out to our team at:</p>
-<p><a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a></p>
+<p><a href="mailto:instamo.studio@gmail.com">instamo.studio@gmail.com</a></p>
 </body>
 </html>
