--- a/pp.html
+++ b/pp.html
@@ -29,7 +29,7 @@
     <h1>Wasakit Privacy Policy</h1>
     <p><em>Last Updated: March 26, 2025</em></p>
 
-    <p>At Anna Studio, we value your privacy. This Privacy Policy explains how we collect, use, disclose, and protect your information when you use the Wasakit application ("App"). By using the App, you agree to the terms of this Privacy Policy. If you have questions, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
+    <p>At Kawasiki Studio, we value your privacy. This Privacy Policy explains how we collect, use, disclose, and protect your information when you use the Wasakit application ("App"). By using the App, you agree to the terms of this Privacy Policy. If you have questions, please contact us at <a href="mailto:shrekdad@gmail.com">shrekdad@gmail.com</a>.</p>
 
     <h2>1. Information We Collect</h2>
     <p>We may collect the following types of information:</p>
